server-auth/kubernetes/resources-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-auth
  namespace: default
  labels:
    app: server-auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server-auth
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: server-auth
    spec:
      containers:
        - name: server-auth-1
          image: asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/server-auth:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
