server-auth/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  labels:
    app: server-auth
  name: server-auth-service
  namespace: default
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Local
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: server-auth
  sessionAffinity: ClientIP
  type: ClusterIP
